--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina Institucional de la Municipalidad Distrital de Pillco Marca">
+    <meta name="keywords" content="Muni Pillco Marca, Municipalidad Distrital de Pillco Marca, Pillco Marca, Historia de Pillco Marca">
+
     <title>Municipalidad Distrital de Pillco Marca</title>
   </head>
   <body>
